--- a/dompractice.html
+++ b/dompractice.html
@@ -7,6 +7,17 @@
 	<body>
 		<main>
 			<span>hello.com</span>
+			<div>
+				<p>
+					The commercialization of cottage cheese is unacceptable
+				</p>
+				<h1>NONETHELESS</h1>
+				<p>We cannot continue as if the foodstuff community-at-large
+					has not been waging a <a href="https://www.chess.com/play/computer">(play chess here)</a>
+					war on our beloved democracy</p>
+			</div>
+			<h2>Resistance</h2>
+			<h3 id="xfiles"> The truth is out there</h3>
 			<h1><strike>Cowabunga</strike></h1>
 		</main>
 	</body>
