--- a/dompractice.html
+++ b/dompractice.html
@@ -19,6 +19,13 @@
 			<h2>Resistance</h2>
 			<h3 id="xfiles"> The truth is out there</h3>
 			<h1><strike>Cowabunga</strike></h1>
+			<p>How could we stay quiet?</p>
+			<h1>Are <a id="second">You</a> not terrified? </h1>
+			<p>Is there really <q>everything needed to confirm your beliefs</q> out there?</p>
+			<div>
+				<h1>Yes there is!</h1>
+				<p> <i>Sometimes</i> good honest folk have to get their hands dirty</p>
+			</div>
 		</main>
 	</body>
 </html>
