html completed for challenge

--- a/dompractice.html
+++ b/dompractice.html
@@ -5,27 +5,37 @@
 		<title>United schtaetess</title>
 	</head>
 	<body>
+		<header>
+		<span>hello.com</span>
+		</header>
 		<main>
-			<span>hello.com</span>
+			<section>
 			<div>
 				<p>
 					The commercialization of cottage cheese is unacceptable
 				</p>
 				<h1>NONETHELESS</h1>
-				<p>We cannot continue as if the foodstuff community-at-large
+				<span>We cannot continue as if the foodstuff community-at-large
 					has not been waging a <a href="https://www.chess.com/play/computer">(play chess here)</a>
-					war on our beloved democracy</p>
+					war on our beloved democracy</span>
 			</div>
 			<h2>Resistance</h2>
 			<h3 id="xfiles"> The truth is out there</h3>
-			<h1><strike>Cowabunga</strike></h1>
-			<p>How could we stay quiet?</p>
-			<h1>Are <a id="second">You</a> not terrified? </h1>
-			<p>Is there really <q>everything needed to confirm your beliefs</q> out there?</p>
+			<span><strike>Cowabunga</strike></span>
+			</section>
+			<section>
+				<p>How could we stay quiet?</p>
+				<h1>Are <a id="second">You</a> not terrified? </h1>
+				<p>Is there really <q>everything needed to confirm your beliefs</q> out there?</p>
+			</section>
+		</main>
+		<footer>
 			<div>
 				<h1>Yes there is!</h1>
-				<p> <i>Sometimes</i> good honest folk have to get their hands dirty</p>
+				<span> <i>Sometimes</i> good honest folk have to get their hands dirty</span>
+				<code> internet.computer</code>
 			</div>
-		</main>
+		</footer>
 	</body>
 </html>
+<!-- count: 10, 5, 5, 1 -->
