added challenge snap dom

--- a/dompractice.html
+++ b/dompractice.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>United schtaetess</title>
 	</head>
 	<body>
 		<header>
@@ -10,20 +9,20 @@
 		</header>
 		<main>
 			<section>
-			<div>
-				<p>
+				<div>
+					<p>
 					The commercialization of cottage cheese is unacceptable
-				</p>
-				<h1>NONETHELESS</h1>
-				<span>We cannot continue as if the foodstuff community-at-large
+					</p>
+					<h1>NONETHELESS</h1>
+					<span>We cannot continue as if the foodstuff community-at-large
 					has not been waging a <a href="https://www.chess.com/play/computer">(play chess here)</a>
 					war on our beloved democracy</span>
-			</div>
-			<h2>Resistance</h2>
-			<h3 id="xfiles"> The truth is out there</h3>
-			<span><strike>Cowabunga</strike></span>
+				</div>
+				<h2>Resistance</h2>
+				<h3 id="xfiles"> The truth is out there</h3>
+				<span><strike>Cowabunga</strike></span>
 			</section>
-			<section>
+			<section id="2">
 				<p>How could we stay quiet?</p>
 				<h1>Are <a id="second">You</a> not terrified? </h1>
 				<p>Is there really <q>everything needed to confirm your beliefs</q> out there?</p>
