added challenge snap dom

--- a/dompractice.html
+++ b/dompractice.html
@@ -23,7 +23,7 @@
 				<span><strike>Cowabunga</strike></span>
 			</section>
 			<section id="2">
-				<p>How could we stay quiet?</p>
+				<p>How could we stay quiet, sir?</p>
 				<h1>Are <a id="second">You</a> not terrified? </h1>
 				<p>Is there really <q>everything needed to confirm your beliefs</q> out there?</p>
 			</section>
