redone snap dom

--- a/dompractice.html
+++ b/dompractice.html
@@ -13,10 +13,12 @@
 					<p>
 					The commercialization of cottage cheese is unacceptable
 					</p>
+					<section>
 					<h1>NONETHELESS</h1>
 					<span>We cannot continue as if the foodstuff community-at-large
 					has not been waging a <a href="https://www.chess.com/play/computer">(play chess here)</a>
 					war on our beloved democracy</span>
+					</section>
 				</div>
 				<h2>Resistance</h2>
 				<h3 id="xfiles"> The truth is out there</h3>
@@ -31,8 +33,12 @@
 		<footer>
 			<div>
 				<h1>Yes there is!</h1>
-				<span> <i>Sometimes</i> good honest folk have to get their hands dirty</span>
-				<code> internet.computer</code>
+				<section>
+					<span> <i>Sometimes</i> good honest folk have to get their hands dirty</span>
+				</section>
+				<section>
+					<code> internet.computer</code>
+				</section>
 			</div>
 		</footer>
 	</body>
